change publish repo to local

--- a/scripted/pip-example/Jenkinsfile
+++ b/scripted/pip-example/Jenkinsfile
@@ -29,7 +29,7 @@ node {
             "files": [
                 {
                     "pattern": "dist/",
-                    "target": "pypi-virtual/"
+                    "target": "default-pypi-local/"
                 }
             ]
         }"""
