--- a/declarative/pip-example/Jenkinsfile
+++ b/declarative/pip-example/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
             steps {
                 rtServer (
                     id: "ARTIFACTORY_SERVER",
-                    url: "https://playtikatraining.jfrog.io/artifactory",
+                    url: "https://otomato.jfrog.io/artifactory",
                     credentialsId: "rt"
                 )
 
